--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
 MONGODB_URL = mongodb+srv://kaifkalanthar:kaifhacktech3497@cluster0.ccngtpq.mongodb.net/?retryWrites=true&w=majority
+PORT = https://hachtechapi-kucp.onrender.com/
