--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "hacktech_api",
   "version": "1.0.0",
   "description": "Api for hachtech",
-  "main": "app.js",
+  "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node index.js"
@@ -10,12 +10,21 @@
   "author": "Mohamed Kaif",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.1.0",
+    "config": "^3.3.9",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "express-async-errors": "^3.1.1",
+    "fawn": "^2.1.5",
     "fs": "^0.0.1-security",
+    "joi": "^17.9.1",
+    "jsonwebtoken": "^9.0.0",
+    "lodash": "^4.17.21",
+    "moment": "^2.29.4",
     "mongoose": "^7.0.3",
-    "multer": "^1.4.5-lts.1"
+    "multer": "^1.4.5-lts.1",
+    "winston": "^3.8.2"
   }
 }
