--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node index.js"
+    "serve": "node index.js",
+    "dev": "nodemon index.js"
   },
   "author": "Mohamed Kaif",
   "license": "ISC",
@@ -14,6 +15,7 @@
     "config": "^3.3.9",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
+    "D": "^1.0.0",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-async-errors": "^3.1.1",
@@ -25,6 +27,7 @@
     "moment": "^2.29.4",
     "mongoose": "^7.0.3",
     "multer": "^1.4.5-lts.1",
+    "nodemon": "^2.0.22",
     "winston": "^3.8.2"
   }
 }
