--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "serve": "node index.js",
-    "build": "echo 'hey'",
+    "build": "nodemon index.js",
     "dev": "nodemon index.js"
   },
   "author": "Mohamed Kaif",
